[DUOS-1442][risk=no] Remove deprecated APIs and related code. (#2131)